# auth-squared

./: .env.example  .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE  README.md  SECURITY.md  cog.toml  compose.yml  docker-compose.yml  taskfile.yml
.devcontainer/: devcontainer.json
.devcontainer/config/: .zshrc
.docker/auth-squared/: Dockerfile
.docker/auth-squared/config/: .env.example
.docker/build-app/: Dockerfile
.docker/build-app/config/: .env.example
.docker/build-app/entrypoints/: docker-entrypoint  docker-entrypoint-dev
.docker/mock-postgresql/: docker-compose.yml
.docker/mock-postgresql/postgresql/config/: .env.example
.docker/mock-redis/: docker-compose.yml
.docker/stack-postgresql/: compose.yml  docker-compose.yml
.docker/stack-redis/: compose.yml  docker-compose.yml
.docker/stack-supervision/: compose.yml
.docker/supervision/: docker-compose.yml
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: conventional-commit-compliance-check.yml  generate-release.yml
auth-squared/: server.py
hooks/: git-commit-msg.sh
resources/: pyproject.toml  server.py
resources/app/config/: settings.py
resources/app/libs/: __init__.py  database.py  logger.py  redis_helper.py
resources/app/libs/exceptions/: __init__.py
resources/app/routers/: root.py
resources/app/routers/api/: system_utils.py
taskfiles/: taskfile-docker_linux.yml  taskfile-docker_windows.yml  taskfile-project_linux.yml  taskfile-project_windows.yml
taskfiles/config/: .env.example
(+5 files in other folders)
